# nabu

./: .env  .gitignore  Cargo.toml  LICENSE  docker-compose.yml  flake.nix  shell.nix
.cargo/: config.toml
crates/database/: Cargo.toml
crates/database/migrations/2023-11-11-152949_initial-users/: down.sql  up.sql
crates/database/migrations/2023-11-23-123838_add-crates/: down.sql  up.sql
crates/database/src/: lib.rs  models.rs  schema.rs
crates/examplelib/: Cargo.toml
crates/metadata/: Cargo.toml
crates/metadata/src/: index.rs  lib.rs  publish.rs
src/: api.rs  auth.rs  cli.rs  configuration.rs  index.rs  main.rs  state.rs
