[package]
name = "nabu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*"]

[dependencies]
axum = { version = "0.6.20", features = ["http2", "tracing", "macros"] }
clap = { version = "4.4.8", features = ["derive"] }
config = { version = "0.13.3", default-features = false, features = ["yaml"] }
database = { path = "crates/database" }
dotenv = "0.15.0"
git-testament = "0.2.5"
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = { version = "2.4.1", features = ["serde"] }
