[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
axum = { version = "0.6.20", default-features = false }
bb8 = "0.8.1"
diesel = { version = "2.1.3", features = ["postgres"] }
diesel-async = { version = "0.4.1", features = ["bb8", "postgres"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
futures = "0.3.29"
lazy_static = "1.4.0"
rustls = "0.21.8"
tokio = { version = "1.34.0", default-features = false, features = ["tracing"] }
tokio-postgres = "0.7.10"
tokio-postgres-rustls = "0.10.0"
tracing = "0.1.40"
webpki-roots = "0.25.2"
